# marine-heatwave-rag

./: .gitignore  LICENSE  create_embedding_db.py  debug_chroma_db.py  main.py  pyproject.toml  rag_prompt.py  scrape_marine_heatwave.py  test_embedding.py
data/: marine_heatwave_discussion_init_September_2025.md  sync_log.json
